<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rosa"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="206dp"
        android:layout_height="187dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/imgHeart"
        android:onClick="LoveCalculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:srcCompat="@drawable/cuore"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/View1"
        android:layout_width="270dp"
        android:layout_height="67dp"
        android:fontFamily="cursive"
        android:includeFontPadding="false"
        android:text="@string/Wiev_yourName"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/edit1"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/View2"
        android:layout_width="270dp"
        android:layout_height="67dp"
        android:fontFamily="cursive"
        android:text="@string/partener_s_name"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/edit1" />

    <EditText
        android:id="@+id/edit1"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:fontFamily="cursive"
        android:hint="@string/edit1YourN"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorLink="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/View2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/View1"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/edi2Name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/View2"
        android:autofillHints="" />

    <TextView
        android:id="@+id/GOresult"
        android:layout_width="109dp"
        android:layout_height="77dp"
        android:layout_marginBottom="88dp"
        android:fontFamily="cursive"
        android:text="@string/go"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <!--  <androidx.constraintlayout.widget.Guideline
          android:id="@+id/guideline4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          app:layout_constraintGuide_percent="0.45" />

       <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.41" /> -->

</androidx.constraintlayout.widget.ConstraintLayout>